fix: horizontal scrollbar should be visible when tab list overflows

--- a/src/renderer/src/components/repository-workspace/editor-panel-group/EditorPanelGroup/EditorPanelGroup.css
+++ b/src/renderer/src/components/repository-workspace/editor-panel-group/EditorPanelGroup/EditorPanelGroup.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  justify-content: flex-start;
 
   width: 100%;
 
@@ -13,8 +14,29 @@
 .editor-panel-group .tab-list {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
 
   background-color: var(--color-secondary);
+
+  flex-basis: 45px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  overflow-x: auto;
+}
+
+.editor-panel-group .tab-list::-webkit-scrollbar {
+  height: 5px;
+  border: 1px solid #fff;
+}
+
+.editor-panel-group .tab-list::-webkit-scrollbar-track {
+  border-radius: 0;
+  background: var(--color-secondary);
+}
+
+.editor-panel-group .tab-list::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background: var(--color-secondary-hover);
 }
 
 .editor-panel-group .tab-label {
